[tool.poetry]
name = "blum"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyautogui = "^0.9.54"
pynput = "^1.7.7"
keyboard = "^0.13.5"
pywinctl = "^0.4"
bpython = "^0.24"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
